--- a/branches/jeremy/AndroidManifest.xml
+++ b/branches/jeremy/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.toload.main" android:versionCode="70" android:versionName="2.1b">
+	package="net.toload.main" android:versionName="2.1b" android:versionCode="90">
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
