--- a/branches/beta/AndroidManifest.xml
+++ b/branches/beta/AndroidManifest.xml
@@ -3,6 +3,7 @@
 	package="net.toload.main" android:versionName="2.1b" android:versionCode="90">
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.READ_CONTACTS"/>
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
@@ -43,6 +44,8 @@
 	</application>
 	
 	<uses-sdk android:minSdkVersion="3" />
+
+
 
 </manifest> 
 
