--- a/branches/beta/AndroidManifest.xml
+++ b/branches/beta/AndroidManifest.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.toload.main" android:versionName="2.1b" android:versionCode="90">
+	package="net.toload.main" 
+	android:versionName="2.1b" 
+	android:versionCode="100" 
+	android:installLocation="auto"
+	>
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
-	<uses-permission android:name="android.permission.READ_CONTACTS"/>
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.READ_CONTACTS"/>  
+	
 
 	<application android:icon="@drawable/icon" android:label="@string/ime_name">
 
@@ -44,8 +49,6 @@
 	</application>
 	
 	<uses-sdk android:minSdkVersion="3" />
-
-
 
 </manifest> 
 
