--- a/branches/beta/AndroidManifest.xml
+++ b/branches/beta/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.toload.main" 
 	android:versionName="3.0" 
-	android:versionCode="107" 
+	android:versionCode="108" 
 	android:installLocation="auto"
 	>
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -11,7 +11,8 @@
 	<uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
 	<uses-permission android:name="android.permission.READ_CONTACTS"/>  
-	<uses-permission android:name="android.permission.INTERNET"/>  
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES"/>  
 	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>  
 	
