--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.toload.main" 
-	android:versionName="3.0.0" 
+	android:versionName="3.0.1" 
 	android:versionCode="109" 
-	android:installLocation="auto"
-	>
+	android:installLocation="auto">
+	
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
