--- a/trunk/LIME/AndroidManifest.xml
+++ b/trunk/LIME/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.toload.main" 
-	android:versionName="3.0.5" 
-	android:versionCode="119" 
-	android:installLocation="auto">
+	android:installLocation="auto" android:versionCode="120" android:versionName="3.0.4">
 	
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
@@ -58,7 +56,7 @@
 
 	</application>
 	
-	<uses-sdk android:minSdkVersion="4" />
+	<uses-sdk android:minSdkVersion="3" />
 
 </manifest> 
 
