--- a/trunk/LIME/AndroidManifest.xml
+++ b/trunk/LIME/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.toload.main" 
-	android:installLocation="auto" android:versionCode="130" android:versionName="3.0.9">
-	
+	package="net.toload.main" android:installLocation="auto"
+	android:versionCode="130" android:versionName="3.0.9">
+
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_USER_DICTIONARY" />
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
-	<uses-permission android:name="android.permission.READ_CONTACTS"/>  
+	<uses-permission android:name="android.permission.READ_CONTACTS" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-permission android:name="android.permission.INSTALL_PACKAGES"/>  
-	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>  
-	
+	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
 	<application android:icon="@drawable/icon" android:label="@string/ime_name">
 
 		<!-- LIME Services -->
@@ -41,11 +41,13 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
-		</activity><!--
-		
-		<activity android:name=".LIMESetting" android:label="@string/ime_setting">
 		</activity>
-		--><activity android:name=".LIMEInitial" android:label="@string/ime_setting">
+		<!--
+
+			<activity android:name=".LIMESetting"
+			android:label="@string/ime_setting"> </activity>
+		-->
+		<activity android:name=".LIMEInitial" android:label="@string/ime_setting">
 		</activity>
 		<activity android:name=".LIMEIMSetting" android:label="@string/ime_setting">
 		</activity>
@@ -55,8 +57,13 @@
 		</activity>
 
 	</application>
-	
+
 	<uses-sdk android:minSdkVersion="3" />
+	<supports-screens 
+		android:largeScreens="true"
+		android:normalScreens="true" 
+		android:smallScreens="true"
+		android:anyDensity="true" />
 
 </manifest> 
 
