--- a/LIME/AndroidManifest.xml
+++ b/LIME/AndroidManifest.xml
@@ -13,6 +13,8 @@
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
 	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
 	<application android:icon="@drawable/icon" android:label="@string/ime_name">
 
@@ -54,6 +56,8 @@
 		<activity android:name=".LIMEMappingSetting" android:label="@string/ime_setting">
 		</activity>
 		<activity android:name=".LIMEPreference" android:label="@string/ime_setting">
+		</activity>
+		<activity android:name=".LIMEBluetooth" android:label="@string/ime_setting">
 		</activity>
 
 	</application>
