--- a/trunk/LIME/AndroidManifest.xml
+++ b/trunk/LIME/AndroidManifest.xml
@@ -12,9 +12,9 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.INSTALL_PACKAGES" />
-	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /><!-- 
 	<uses-permission android:name="android.permission.BLUETOOTH" />
-	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> -->
 
 	<application android:icon="@drawable/icon" android:label="@string/ime_name">
 
@@ -56,9 +56,9 @@
 		<activity android:name=".LIMEMappingSetting" android:label="@string/ime_setting">
 		</activity>
 		<activity android:name=".LIMEPreference" android:label="@string/ime_setting">
-		</activity>
+		</activity><!-- 
 		<activity android:name=".LIMEBluetooth" android:label="@string/ime_setting">
-		</activity>
+		</activity> -->
 
 	</application>
 
