--- a/LIME/AndroidManifest.xml
+++ b/LIME/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.toload.main" android:installLocation="auto"
-	android:versionCode="153" android:versionName="3.2.0">
+	android:versionCode="154" android:versionName="3.2.0">
 
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.VIBRATE" />
@@ -49,6 +49,7 @@
 			<activity android:name=".LIMESetting"
 			android:label="@string/ime_setting"> </activity>
 		-->
+		
 		<activity android:name=".LIMEInitial" android:label="@string/ime_setting">
 		</activity>
 		<activity android:name=".LIMEIMSetting" android:label="@string/ime_setting">
@@ -56,9 +57,12 @@
 		<activity android:name=".LIMEMappingSetting" android:label="@string/ime_setting">
 		</activity>
 		<activity android:name=".LIMEPreference" android:label="@string/ime_setting">
-		</activity><!-- 
+		</activity>
+		
+		<!-- 
 		<activity android:name=".LIMEBluetooth" android:label="@string/ime_setting">
-		</activity> -->
+		</activity> 
+		-->
 
 	</application>
 
