1. Removed android:enabled="false" tag from AndroidManifest.xml, which cause apk not installed correctly. 2. Add validation on selkey read from .cin file, use default selkey if .cin selkey is invalidated. 3. Do physical key candidate selection only on physical keyboard

--- a/branches/limehd/AndroidManifest.xml
+++ b/branches/limehd/AndroidManifest.xml
@@ -17,7 +17,7 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> -->
 
-	<application android:icon="@drawable/icon" android:label="@string/ime_name" android:enabled="false">
+	<application android:icon="@drawable/icon" android:label="@string/ime_name">
 
 		<!-- LIME Services -->
 		<service android:name=".LIMEService" android:permission="android.permission.BIND_INPUT_METHOD">
