--- a/branches/limehd/AndroidManifest.xml
+++ b/branches/limehd/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.toload.main.hd" android:versionName="3.3.1" android:versionCode="192" >
+	package="net.toload.main.hd" android:versionName="3.3.1" android:versionCode="193" >
 
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
@@ -39,7 +39,7 @@
 			</intent-filter>
 		</service>
 
-		<activity android:name=".LIMEMenu" android:label="@string/ime_setting">
+		<activity android:name=".LIMEMenu" android:label="@string/ime_setting" android:configChanges="keyboardHidden|orientation">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
@@ -51,13 +51,13 @@
 			android:label="@string/ime_setting"> </activity>
 		-->
 		
-		<activity android:name=".LIMEInitial" android:label="@string/ime_setting">
+		<activity android:name=".LIMEInitial" android:label="@string/ime_setting" android:configChanges="keyboardHidden|orientation">
 		</activity>
-		<activity android:name=".LIMEIMSetting" android:label="@string/ime_setting">
+		<activity android:name=".LIMEIMSetting" android:label="@string/ime_setting" android:configChanges="keyboardHidden|orientation">
 		</activity>
-		<activity android:name=".LIMEMappingSetting" android:label="@string/ime_setting">
+		<activity android:name=".LIMEMappingSetting" android:label="@string/ime_setting" android:configChanges="keyboardHidden|orientation">
 		</activity>
-		<activity android:name=".LIMEPreference" android:label="@string/ime_setting">
+		<activity android:name=".LIMEPreference" android:label="@string/ime_setting" android:configChanges="keyboardHidden|orientation">
 		</activity>
 		
 		<!-- 
