--- a/branches/limehd/.settings/org.eclipse.core.resources.prefs
+++ b/branches/limehd/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Fri May 27 10:38:04 CST 2011
+#Wed Jul 20 23:46:39 CST 2011
 eclipse.preferences.version=1
 encoding//src/net/toload/main/hd/ChineseSymbol.java=UTF-8
+encoding//src/net/toload/main/hd/LimeDB.java=UTF-8
