--- a/branches/limehd/AndroidManifest.xml
+++ b/branches/limehd/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.toload.main.hd" android:versionName="3.3.2" android:versionCode="205" >
+	package="net.toload.main.hd" android:versionName="3.3.2" android:versionCode="205" android:installLocation="internalOnly">
 
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
