Update ChineseSymbol encoding

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Sun Aug 07 09:09:20 CST 2011
+#Fri Aug 12 22:57:59 CST 2011
 eclipse.preferences.version=1
 encoding//src/net/toload/main/hd/ChineseSymbol.java=UTF-8
 encoding//src/net/toload/main/hd/SearchService.java=UTF-8
+encoding//src/net/toload/main/hd/global/ChineseSymbol.java=UTF-8
 encoding//src/net/toload/main/hd/limedb/LimeDB.java=UTF-8
