1. Add themes setting for 3.x (v11) and 4.x (v14) for the mapping loading dialog to be full screen, which will resolve the bug of touch outside the dialog cause the dialog to be gone. 2. Bug fixed on hang if user abort the mapping loading in downloading stage. 3. Bug fixed on show mapping loading finished notification if user abort the loading in file downloading stage.

--- a/limehd/AndroidManifest.xml
+++ b/limehd/AndroidManifest.xml
@@ -17,7 +17,7 @@
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> -->
 
-	<application android:icon="@drawable/icon" android:label="@string/ime_name">
+	<application android:icon="@drawable/icon" android:label="@string/ime_name" android:theme="@style/LIMEHDTheme">
 
 		<!-- LIME Services -->
 		<service android:permission="android.permission.BIND_INPUT_METHOD" android:name="LIMEService">
@@ -54,7 +54,7 @@
 		<activity android:configChanges="keyboard|keyboardHidden|orientation" android:label="@string/ime_setting" android:name="net.toload.main.hd.limesettings.LIMEPreference">
 		</activity>
 		
-		<activity android:theme="@android:style/Theme.Dialog" android:configChanges="keyboard|keyboardHidden|orientation" android:name=".limesettings.LIMEMappingLoading"></activity>
+		<activity android:theme="@style/LIMEHDDialogTheme" android:configChanges="keyboard|keyboardHidden|orientation" android:name=".limesettings.LIMEMappingLoading"></activity>
 
 	</application>
 
