Fixed rotation activity restart issue

--- a/limehd/AndroidManifest.xml
+++ b/limehd/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.toload.main.hd" android:versionName="3.9.0" android:versionCode="333">
+	package="net.toload.main.hd" android:versionName="3.9.1" android:versionCode="334">
 
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
@@ -51,17 +51,17 @@
 		</service>
 		-->
 		
-		<activity android:label="@string/ime_setting" android:configChanges="keyboard|keyboardHidden|orientation" android:name="LIMEMenu">
+		<activity android:label="@string/ime_setting" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="LIMEMenu">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>		
-		<activity android:configChanges="keyboard|keyboardHidden|orientation" android:label="@string/ime_setting" android:name="net.toload.main.hd.limesettings.LIMEInitial">
+		<activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="net.toload.main.hd.limesettings.LIMEInitial">
 		</activity>
-		<activity android:configChanges="keyboard|keyboardHidden|orientation" android:label="@string/ime_setting" android:name="net.toload.main.hd.limesettings.LIMEIMSetting">
+		<activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="net.toload.main.hd.limesettings.LIMEIMSetting">
 		</activity>
-		<activity android:configChanges="keyboard|keyboardHidden|orientation" android:label="@string/ime_setting" android:name="net.toload.main.hd.limesettings.LIMEMappingSetting">
+		<activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="net.toload.main.hd.limesettings.LIMEMappingSetting">
 		</activity>
 		<activity android:configChanges="keyboard|keyboardHidden|orientation" android:label="@string/ime_setting" android:name="net.toload.main.hd.limesettings.LIMEPreference">
 		</activity>
