1. Update admob library to latest and refereed with google play service library project. 2. Bug fixed on cloud restore failed to replace database. 3. Bug fixed on scores not updated when word selected has length > 1. 4. Add the last word into query when building related list when committed word length >1

--- a/limehd/.classpath
+++ b/limehd/.classpath
@@ -19,10 +19,10 @@
 	<classpathentry exported="true" kind="lib" path="libs/jsr305-1.3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/guava-11.0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/mail.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="libs/GoogleAdMobAdsSdk-6.1.0.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
