--- a/limehd/project.properties
+++ b/limehd/project.properties
@@ -8,7 +8,9 @@
 # project structure.
 
 # Project target.
-target=android-17
+target=android-19
 apk-configurations=
 
 #proguard.config=proguard.cfg
+android.library=false
+android.library.reference.1=../../extras/google/google_play_services/libproject/google-play-services_lib
