--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -24,4 +24,29 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:support-v4:22.0.0'
+    compile files('libs/activation.jar')
+    compile files('libs/jackson-core-asl-1.9.4.jar')
+    compile files('libs/json_simple-1.1.jar')
+    compile files('libs/commons-codec-1.3.jar')
+    compile files('libs/httpmime-4.0.3.jar')
+    compile files('libs/httpcore-4.0.1.jar')
+    compile files('libs/dropbox-android-sdk-1.5.3.jar')
+    compile files('libs/guava-11.0.2.jar')
+    compile files('libs/gdata-media-1.0.jar')
+    compile files('libs/google-api-client-android2-1.8.0-beta.jar')
+    compile files('libs/httpclient-4.0.3.jar')
+    compile files('libs/gdata-docs-3.0.jar')
+    compile files('libs/gdata-base-1.0.jar')
+    compile files('libs/gdata-client-1.0.jar')
+    compile files('libs/mail.jar')
+    compile files('libs/jsr305-1.3.9.jar')
+    compile files('libs/google-api-client-1.8.0-beta.jar')
+    compile files('libs/google-http-client-android2-1.8.3-beta.jar')
+    compile files('libs/commons-logging-1.1.1.jar')
+    compile files('libs/gdata-core-1.0.jar')
+    compile files('libs/gson-2.1.jar')
+    compile files('libs/google-http-client-1.8.3-beta.jar')
+    compile files('libs/GoogleAdMobAdsSdk-6.1.0.jar')
+    compile files('libs/google-oauth-client-1.8.0-beta.jar')
+    compile files('libs/android-support-v4.jar')
 }
