update before shutdown the desktop

--- a/LimeStudio/app/build.gradle
+++ b/LimeStudio/app/build.gradle
@@ -18,6 +18,13 @@ android {
     }
     productFlavors {
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
