--- a/LimeStudio/app/src/main/AndroidManifest.xml
+++ b/LimeStudio/app/src/main/AndroidManifest.xml
@@ -83,7 +83,8 @@
 
         <activity android:theme="@style/LIMEHDDialogTheme" android:configChanges="keyboard|keyboardHidden|orientation" android:name=".limesettings.LIMEMappingLoading"></activity>
 
-        <activity android:name="com.dropbox.client2.android.AuthActivity"
+        <activity
+            android:name="com.dropbox.client2.android.AuthActivity"
             android:launchMode="singleTask"
             android:configChanges="orientation|keyboard">
             <intent-filter>
@@ -94,6 +95,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
 
         <!--
         <meta-data android:name="com.google.android.backup.api_key"
